syntax = "proto3";

package distributedsorting;
/*
master should check whether the workers are running or not.
If every worker is ready, then continue the program.
If it is not, we need timeout.
 */
service CheckWorkersRunning {
  rpc Connection (ConnectionRequest) returns (ConnectionRespond) {}
}

message ConnectionRequest {
  bool isMasterStart = 1;
}

message ConnectionRespond {
  bool isWorkerStart = 1;
}



