syntax = "proto3";

package distributedsorting;
/*
MainDistributeBlocks distribute the blocks to each workers,
and get the sample value from the worker.
 */
service Distribute {
  rpc Distribute (DistributeRequest) returns (DistributeRespond) {}
}

/*
The value `distributed` will always be true, since
we assume that every data is distributed already in the workers.
If the data is not distributed, we need to store the data in the message.
 */
message DistributeRequest {
  int32 port = 1;
}

message DistributeRespond {
  string data = 1;
}